--- a/tutorial/src/benchmark_experiments.Rmd
+++ b/tutorial/src/benchmark_experiments.Rmd
@@ -88,7 +88,7 @@ that case we have two resampling levels.
 We show an example with outer bootstrap and inner cross-validation,
 our [Learner](&makeLearner) will be k-nearest neighbour.
 
-```{r eval=FALSE}
+```{r}
 ## Range of hyperparameter k
 ps = makeParamSet(makeDiscreteParam("k", 1:5))
 ctrl = makeTuneControlGrid()
@@ -97,14 +97,16 @@ ctrl = makeTuneControlGrid()
 inner.rdesc = makeResampleDesc("CV", iters = 3)
 
 ## Tune k-nearest neighbor
-lrn = makeTuneWrapper("classif.kknn", resampling = inner.rdesc, par.set = ps, control = ctrl)
+lrn = makeTuneWrapper("classif.kknn", resampling = inner.rdesc, par.set = ps, control = ctrl,
+    show.info = FALSE)
 
 ## Define "outer" bootstrap indices
 rdesc = makeResampleDesc("Bootstrap", iters = 5)
 
 ## Merge it into a benchmark experiment
 ## Choose accuracy instead of default measure mean misclassification error
-res = benchmark(lrn, iris.task, rdesc, measure = acc)
+res = benchmark(lrn, iris.task, rdesc, measure = acc, show.info = FALSE)
+res
 
 ## What parameter setting achieved this performances?
 getTuneResult(res)
@@ -121,7 +123,7 @@ strategy either in the outer or inner run. They can be mixed as desired.
 Now we look at an extensive example that shows a benchmark experiment with two data
 sets, three [Learners](&makeLearner) and [tuning](&tune.md).
 
-```{r eval=FALSE}
+```{r}
 ## List of learning tasks
 tasks = list(iris.task, bc.task)
 
@@ -134,7 +136,8 @@ ctrl = makeTuneControlGrid()
 inner.rdesc = makeResampleDesc("CV", iters = 3)
 
 ## Tune a SVM
-lrn = makeTuneWrapper("classif.ksvm", resampling = inner.rdesc, par.set = ps, control = ctrl)
+lrn = makeTuneWrapper("classif.ksvm", resampling = inner.rdesc, par.set = ps, control = ctrl,
+    show.info = FALSE)
 
 ## Three learners to be compared
 lrns = list(makeLearner("classif.lda"), makeLearner("classif.rpart"), lrn)
@@ -144,15 +147,13 @@ rdesc = makeResampleDesc("CV", iters = 5)
 
 ## Merge it to a benchmark experiment
 res = benchmark(lrns, tasks, rdesc, show.info = FALSE)
+res
 
-## Only for one task
+## Performance values in individual runs
 getPerformances(res)
 
 ## Tuned parameter for SVM
 getTuneResult(res)
-
-## Optimal performance of the inner (!) resampling, i.e., here 3-fold cross-validation
-#res["opt.perf", learner = "classif.ksvm"]
 ```
 
 ### Example 3: One task, two learners, feature selection
@@ -168,7 +169,7 @@ ctrl = makeFeatSelControlSequential(beta = 100, method = "sfs")
 inner.rdesc = makeResampleDesc("CV", iter = 2)
 
 ## Feature selection with sequential forward search (sfs)
-lrn = makeFeatSelWrapper("classif.lda", resampling = inner.rdesc, control = ctrl,
+lrn = makeFeatSelWrapper("classif.lda", resampling = inner.rdesc, control = ctrl, 
     show.info = FALSE)
 
 ## Let's compare two learners
