--- a/tutorial/src/benchmark_experiments.Rmd
+++ b/tutorial/src/benchmark_experiments.Rmd
@@ -94,18 +94,18 @@ ps = makeParamSet(makeDiscreteParam("k", 1:5))
 ctrl = makeTuneControlGrid()
 
 ## Define "inner" cross-validation indices
-inner.rdesc = makeResampleDesc("CV", iters = 3)
+in.rdesc = makeResampleDesc("CV", iters = 3)
 
 ## Tune k-nearest neighbor
-lrn = makeTuneWrapper("classif.kknn", resampling = inner.rdesc, par.set = ps, control = ctrl,
+lrn = makeTuneWrapper("classif.kknn", resampling = in.rdesc, par.set = ps, control = ctrl,
     show.info = FALSE)
 
 ## Define "outer" bootstrap indices
-rdesc = makeResampleDesc("Bootstrap", iters = 5)
+out.rdesc = makeResampleDesc("Bootstrap", iters = 5)
 
 ## Merge it into a benchmark experiment
 ## Choose accuracy instead of default measure mean misclassification error
-res = benchmark(lrn, iris.task, rdesc, measure = acc, show.info = FALSE)
+res = benchmark(lrn, iris.task, out.rdesc, measure = acc, show.info = FALSE)
 res
 
 ## What parameter setting achieved this performances?
@@ -133,20 +133,20 @@ ps = makeParamSet(makeDiscreteParam("C", 2^seq(-1,1)),
 ctrl = makeTuneControlGrid()
 
 ## Define "inner" cross-validation indices
-inner.rdesc = makeResampleDesc("CV", iters = 3)
+in.rdesc = makeResampleDesc("CV", iters = 3)
 
 ## Tune a SVM
-lrn = makeTuneWrapper("classif.ksvm", resampling = inner.rdesc, par.set = ps, control = ctrl,
+lrn = makeTuneWrapper("classif.ksvm", resampling = in.rdesc, par.set = ps, control = ctrl,
     show.info = FALSE)
 
 ## Three learners to be compared
 lrns = list(makeLearner("classif.lda"), makeLearner("classif.rpart"), lrn)
 
 ## Define "outer" cross-validation indices
-rdesc = makeResampleDesc("CV", iters = 5)
+out.rdesc = makeResampleDesc("CV", iters = 5)
 
 ## Merge it to a benchmark experiment
-res = benchmark(lrns, tasks, rdesc, show.info = FALSE)
+res = benchmark(lrns, tasks, out.rdesc, show.info = FALSE)
 res
 
 ## Performance values in individual runs
@@ -166,20 +166,20 @@ a benchmark experiment:
 ctrl = makeFeatSelControlSequential(beta = 100, method = "sfs")
 
 ## Inner resampling
-inner.rdesc = makeResampleDesc("CV", iter = 2)
+in.rdesc = makeResampleDesc("CV", iter = 2)
 
 ## Feature selection with sequential forward search (sfs)
-lrn = makeFeatSelWrapper("classif.lda", resampling = inner.rdesc, control = ctrl, 
+lrn = makeFeatSelWrapper("classif.lda", resampling = in.rdesc, control = ctrl, 
     show.info = FALSE)
 
 ## Let's compare two learners
 lrns = list(makeLearner("classif.rpart"), lrn)
 
 ## Define outer resampling
-rdesc = makeResampleDesc("Subsample", iter = 3)
+out.rdesc = makeResampleDesc("Subsample", iter = 3)
 
 ## Benchmark experiment
-res = benchmark(tasks = iris.task, learners = lrns, resampling = rdesc, show.info = FALSE)
+res = benchmark(tasks = iris.task, learners = lrns, resampling = out.rdesc, show.info = FALSE)
 res
 
 ## Which features have been selected (in the outer resampling steps)?
